--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 							♦ SQL for database management, data analysis and queries<br>
 							♦ Excel for data cleaning and visualization<br>
 							♦ Tableau for creating dynamic dashboards and visual storytelling<br><br>
-							My recent projects include cleaning large-scale Airbnb datasets in Excel to ensure accuracy and visualizing pricing trends in Tableau. 
+							My recent projects include cleaning large-scale Airbnb datasets in Excel to ensure accuracy and visualizing pricing trends in Tableau. See below!
 						</p>
 					</section>
 
@@ -57,23 +57,23 @@
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/airbnb.png" class="image fit thumb"><img src="images/airbnb.png" alt="" /></a>
 								<h3>Airbnb Full Project</h3>
-								<p>A look at the most profitable location for buying a home for Airbnb, based on 2016-17 data, utilizing Excel for data cleaning and Tableau to visualize price trends.</p>
+								<p>A look at the most profitable location for buying a home for Airbnb, based on 2016-17 data, utilizing Excel for data cleaning and Tableau to visualize price trends.</p><br>
 								<ul class="actions special">
-									<li><a href="https://public.tableau.com/app/profile/joyce.chu1720/viz/AirbnbFullProject_17267030653110/Dashboard1" class="button">View Projects</a></li>
+									<li><a href="https://public.tableau.com/app/profile/joyce.chu1720/viz/AirbnbFullProject_17267030653110/Dashboard1" class="button">View Project</a></li>
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/layoff.png" class="image fit thumb"><img src="images/layoff.png" alt="" /></a>
 								<h3>Data Cleaning of Layoffs Dataset in SQL Server</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> <br>
+								<p>Conducted preliminary data cleaning on a large layoff dataset in Excel and optimized the dataset in SQL by trimming, deleting unnecessary data, and standardizing date formats.</p> <br>
 								<ul class="actions special">
 									<li><a href="https://github.com/JoyceChuAnalyst/PortfolioProjects/blob/main/Data%20Clearning%20in%20MySQL-%20Layoffs.sql" class="button">View Project</a></li>
 								</ul>
 							</article>
 							<article class="col-6 col-12-xsmall work-item">
 								<a href="images/tableau.png" class="image fit thumb"><img src="images/tableau.png" alt="" /></a>
-								<h3>This holds all of my Tableau Dashboards</h3>
-								<p>Lorem ipsum dolor sit amet nisl sed nullam feugiat.</p> <br>
+								<h3>This holds all of my Tableau Dashboards.</h3>
+								<p></p> <br>
 								<ul class="actions special">
 									<li><a href="https://public.tableau.com/app/profile/joyce.chu1720/vizzes" class="button">View Projects</a></li>
 								</ul>
